[package]
name = "chbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
csv_to_table = "0.6.0"
env_logger = "0.11.5"
log = "0.4.22"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
tabled = "0.16.0"
tokio = { version = "1", features = ["full"] }
url = "2.5.3"
