[package]
name = "chbot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.20", features = ["derive"] }
clap-verbosity-flag = {version = "3.0.2", features = ["tracing"]}
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.5.3"
tabled = "0.20.0"
csv_to_table = "0.9.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
